# cpp_mini_projects

./: .gitignore  CMakeLists.txt
blood_bank_management_system/: ABO.cpp  ABO.hpp  BloodStock.cpp  BloodStock.hpp  CMakeLists.txt  Checker.hpp  DataMenu.cpp  DataMenu.hpp  Donor.cpp  Donor.hpp  Donors.cpp  Donors.hpp  Hospital.cpp  Hospital.hpp  Hospitals.cpp  Hospitals.hpp  Menu.hpp  Person.cpp  Person.hpp  application.cpp  code.cpp  data.hpp  io_utility.cpp  io_utility.hpp  menu.cpp  road_map.md
